k8s/ingress.yaml
# Публикация приложения на 80 порту.
# Домен из wildcard-записи *.debugmonkey.ru, которая смотрит на статический
# адрес NAT-ноды, — отдельная A-запись не нужна.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  namespace: web-app
spec:
  ingressClassName: nginx
  rules:
    - host: app.debugmonkey.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 80
